--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -83,8 +83,9 @@ body {
 }
 
 .viz-label {
-	text-align: left;
-	margin-bottom: 18px;
+  text-align: left;
+  grid-auto-rows: 1fr;
+  display: grid;
 }
 
 .viz-title {
