--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -93,7 +93,7 @@ body {
 .viz-title {
   /*font-weight: bolder;*/
   border-radius: 2px;
-  padding: 5px 0;
+  padding: 5px 0 5px 5px;
 }
 
 .viz-title > span {	
