--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -30,6 +30,7 @@ select {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(max(var(--grid-item--min-width), var(--grid-item--max-width)), 1fr));
 	grid-gap: var(--grid-layout-gap);
+	height: auto;
 
 }
 
@@ -150,4 +151,32 @@ body.nightmode {
 	box-shadow: 0 0 10px #4a4a4a80;
 	max-width: 500px;
 	color: #646464;
+}
+
+.poll > * {
+  display: block;
+  padding: 5px;
+  margin: 5px 15%;
+}
+
+legend {
+
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.next-steps {
+  text-align: left;
+  margin: auto;
+  color: #3f4c64;
+  width: auto;
+  min-width: 300px;
+  max-width: 500px;
+  margin-bottom: 100px;
+}
+
+.remark {
+	color: red;
 }
