--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1132,10 +1132,49 @@ blockquote {
 }
 
 .a-dataviz {
-  height: 170vh;
+  height: 76em;
 }
+
 
 .no-limit{
   padding: 0;
   margin: 0;
+}
+
+.poll > * {
+  display: block;
+  padding: 5px;
+  margin: 5px 15%;
+}
+
+.poll > div > label {
+  margin: 10px;
+}
+
+legend {
+
+  width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.next-steps {
+  text-align: left;
+  margin: auto;
+  color: #3f4c64;
+  width: auto;
+  min-width: 300px;
+  max-width: 500px;
+  margin-bottom: 100px;
+  padding: 10px;
+}
+
+.remark {
+  color: red;
+  padding: 10px;
+  background: #b5b5b573;
+  border-radius: 10px;
+  text-align: center;
+  display: none;
 }
