--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -5,6 +5,8 @@
 
 body {
 	margin: 0;
+	min-width: 320px;
+	overflow: auto;
 }
 
 select {
@@ -141,8 +143,6 @@ body.nightmode {
 	display: none;
 	z-index: 5;
 	position: fixed;
-	border-style: solid;
-	border-width: 1px;
 	border-radius: 5px;
 	padding: 20px;
 	bottom: 0;
