--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -152,3 +152,16 @@ body.nightmode {
 	max-width: 500px;
 	color: #646464;
 }
+
+#current_page {	
+  display: none;
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  bottom: 0;
+  font-size: 25px;
+  text-align: center;
+  justify-content: center;
+  background: #ffffff36;
+
+}
