--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -1,5 +1,5 @@
 * {
-	font-family: arial;
+	font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 	user-select: none;
 }
 
@@ -134,6 +134,7 @@ select {
 .theme { /*CLEAR  COLOR*/
   background-color: #dbeff2
 }
+
 
 body.nightmode {
 	background: #182c33;
