--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3266,3 +3266,12 @@ a {
   border-radius: 100px;
   background-color: #b7b7b7;
 }
+
+.swal-wide{/*
+    width:100vw !important;
+    height:50vh !important;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    margin: 0;*/
+}
