--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -150,7 +150,7 @@ body.nightmode {
 	background-color: #ffffffe8;
 	height: fit-content;
 	box-shadow: 0 0 10px #4a4a4a80;
-	max-width: 500px;
+	max-width: 55%;
 	color: #646464;
 }
 
