--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,16 @@
           </div>
         </div>
       </nav>
-    </section><section data-bs-version="5.1" class="content4 cid-t198aXoXp2X .mbr-section--full-height" id="page-content">
-      <h1 class="title mbr-section-title align-center mb-4 mbr-fonts-style display-2" id="title-section"><strong></strong></h1><h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-6" style="padding: 15%;"></h4></section>
+    </section>
+
+
+
+
+    <section data-bs-version="5.1" class="content4 cid-t198aXoXp2X .mbr-section--full-height" id="page-content">
+      <div style="padding:30px;">
+        {{ content }}
+      </div>
+    </section>
 
 
 
