--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html><head>
   <meta charset="UTF-8">
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:src" content="">
@@ -11,6 +12,7 @@
   <meta name="description" content="">
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 
   <title></title>
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
