--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -962,7 +962,7 @@ blockquote {
 	left: -2400px;
 }
 #page-content {
-  min-height: 100%;
+  min-height: 90vh; /*100%*/;
   top: 3em;
 }
 #footer-site {
