--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 
-  <title></title>
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -36,6 +35,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
+  <!--
   <section data-bs-version="5.1" class="menu menu2 cid-t98vDxC9FZ" once="menu" id="navbar-site">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg navbar-short">
@@ -67,7 +67,7 @@
         </div>
       </nav>
     </section>
-
+    -->
 
 
 
@@ -79,11 +79,11 @@
 
 
 
-      <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/ytplayer/index.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>  
+      <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script><script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/ytplayer/index.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script><script type="text/javascript" src="/assets/js/common-elements.js"></script>
       
 
 
-
+<!--
       <section data-bs-version="5.1" class="footer3 cid-t980VYl5qY" once="footers" id="footer-site">    
 
         <div class="container">
@@ -108,7 +108,7 @@
           </div>
         </section>
 
-
+-->
 
       </body>
       </html>
