--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -21,7 +21,7 @@ select {
 
 .grid-container {
 
-	--grid-layout-gap: 10px;
+	--grid-layout-gap: 25px;
 	--grid-column-count: 2;
 	--grid-item--min-width: 360px;
 
@@ -95,6 +95,7 @@ select {
   text-align: left;
   grid-auto-rows: 1fr;
   display: grid;
+  margin-bottom: 10px;
 }
 
 .viz-title {
@@ -114,6 +115,7 @@ select {
   font-weight: bold;
   width: min-content;
   cursor: pointer;
+  margin-bottom: 30px;
 }
 
 .viz-title > span:hover, .viz-text:hover {
