--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -85,7 +85,7 @@ select {
 }
 
 .viz-gauge {
-
+	margin-top: 45px;
 	width: 100%;
 	height: 200px;
 	display: block;
@@ -95,12 +95,10 @@ select {
   text-align: left;
   grid-auto-rows: 1fr;
   display: grid;
-  margin-bottom: 10px;
 }
 
 .viz-title {
-  /*font-weight: bolder;*/
-  border-radius: 2px;
+  border-radius: 5px;
   padding: 5px 0 5px 5px;
   font-weight: bold;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
@@ -131,14 +129,18 @@ select {
 }
 
 
-.themeViz { /*COLOR OF GRAPHS*/
+.themeViz { /*COLOR OF GRAPHS AND TEXT*/
   color: #3f4c64
 }
 
-.theme { /*CLEAR  COLOR*/
-  background-color: #dbeff2
+.theme { /*COLOR OF TITLES*/
+  background-color: #3d52577d;
+  color: white;
 }
 
+.night .theme, .night .themeViz, .night canvas{
+	filter: invert(1);
+}
 
 body.nightmode {
 	background: #182c33;
