--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -50,7 +50,7 @@ select {
 	grid-gap: var(--grid-layout-gap);
 
 	width: 100%;
-	margin-bottom: 5px;
+	padding-bottom: 5px;
 
 }
 
@@ -68,7 +68,7 @@ select {
 
 
 .chart {
-	margin-bottom: 30px;
+	padding-bottom: 30px;
 	height: 520px;
 }
 
@@ -85,7 +85,7 @@ select {
 }
 
 .viz-gauge {
-	margin-top: 45px;
+	padding-top: 45px;
 	width: 100%;
 	height: 200px;
 	display: block;
@@ -113,7 +113,7 @@ select {
   font-weight: bold;
   width: min-content;
   cursor: pointer;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 .viz-title > span:hover, .viz-text:hover {
