--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -160,7 +160,7 @@ body.nightmode {
 	background-color: #ffffffe8;
 	height: fit-content;
 	box-shadow: 0 0 10px #4a4a4a80;
-	max-width: 40vw;
+	max-width: 65%;
 	color: #646464;
 }
 
