--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -93,7 +93,7 @@ select {
 }
 
 .viz-label {
-	text-align: left;
+	text-align: center;
 	display: table-cell;
 	vertical-align: middle;
 	width: 100%;
@@ -102,10 +102,11 @@ select {
 }
 
 .viz-title {
-  border-radius: 5px;
-  padding: 5px;
-  font-weight: bold;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+	text-align: center;
+	border-radius: 5px;
+	padding: 5px;
+	font-weight: bold;
+	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
 
 .viz-title > span {	
