--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -19,6 +19,17 @@ select {
 	border-radius: 5px;
 }
 
+
+.viz-choice, .viz-choice #chosen {
+	z-index: 9999;
+	text-align: center;
+	font-weight: bold;
+	width: 100%;
+	font-size: calc(16px + 1.5vw);
+	position: sticky;
+	top: 0;
+}
+
 .grid-container {
 
 	--grid-layout-gap: 25px;
