--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3189,7 +3189,7 @@ a {
   color: black !important;
 }
 
-.night .nav-link:hover {
+.night .nav-link:hover, .night .nav-link:active, .night .nav-link:focus {
   color: #b74a3c !important;
 }
 
