en cours d'automatisation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
     
-    <h1 id="title-page"><strong>{{ page.title }}</strong></h1>
+    <h1 id="title-page" class="title mbr-section-title align-center mb-4 mbr-fonts-style display-2" id="title-section"><strong>{{ page.title }}</strong></h1>
     <section data-bs-version="5.1" class="content4 cid-t198aXoXp2X .mbr-section--full-height" id="page-content">
       <div>
         {{ content }}
