--- a/assets/default/default.css
+++ b/assets/default/default.css
@@ -1,5 +1,6 @@
 body{
-	font-size: 1.2rem;
+	font-size: calc(1.275rem + .3vw);
+	color: black;
 }
 center {
 	text-align: center;
@@ -10,20 +11,30 @@ section {
 a:hover {
 	filter: brightness(0.8);
 }
+.night a:hover {
+	filter: invert(1) brightness(1.5);
+}
 h2 {
 	padding-top: 50px;
 	font-size: 3rem;
 	font-weight: bold;
 	color: #1a4b53;
 }
-.night h2,.night h3, .night #title-page {
-	filter: invert(1)
-}
 h3 {
 	font-size: 2rem;
+	color: #2c8c9b;
 }
-.top{
-	margin-top: 150px;
+
+.night img {
+	filter: invert(0) !important;
+}
+
+.night #title-page, .night #page-content, .night a, .night #navbarSupportedContent {
+	filter: invert(1);
+}
+.night section {
+  background: black;
+  color: white;
 }
 .night#body_default{
 	background: #0c0c0c;
@@ -31,12 +42,60 @@ h3 {
 .night #title-page{
 	color: white;
 }
+
+#page-content ul {
+	margin-top: 2.3125rem;
+	list-style: none;
+	padding:0;
+}
+#page-content li::before {
+	content: '';
+}
+#page-content li {
+	padding-left: 3vw;
+	margin-bottom: 3vh;
+}
+.top{
+	margin-top: 150px;
+}
 #title-page {
 	text-transform: uppercase;
-	padding-top: 25vh;
+	padding: 25vh 5vw 0 5vw;
 	text-align: center;
 	color: black;
 }
 #page-content {
 	padding-top: 1rem;
+	margin-bottom: 100px;
+}
+.back {
+	text-align: left;
+	top: 24.5vh;
+	position: absolute;
+	z-index: 5;
+	display: none;
+}
+
+#page-content details div *{
+	padding-left: 8vw;	
+}
+.listing {
+	text-align: center;
+	margin-top: 50px;	
+}
+.videowrapper {
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.videowrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
