--- a/DATAVIZ/style.css
+++ b/DATAVIZ/style.css
@@ -56,7 +56,7 @@ select {
 	filter: brightness(1.1);
 }
 
-.night .filter-wrapper { filter: invert(1); }
+.night .filter-wrapper { filter: invert(1); background: #00000082;}
 .filter-wrapper {
 	display: flex;
 	z-index: 9999;
@@ -66,7 +66,7 @@ select {
 	position: sticky;
 	top: 0;
 	border-style: hidden;
-	background: inherit;
+	background: #ffffff82;
 }
 
 .refresh {
